[package]
name = "axum-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["headers"] }
axum-macros = { version = "*" }
chrono = { version = "0.4.24" }
jsonwebtoken = { version = "8.3.0" }
reqwest = { version = "0.11.15", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.94" }
thiserror = { version = "1.0.40" }
tokio = { version = "1.26.0", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
